app/styles/main.scss
// bower:scss
@import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
// endbower

body {
  padding-top: 20px;
  padding-bottom: 20px;
}
.help-inline2 {
    color: #b94a48;
}
.footer{
  margin-top: 5%;
}
.form-horizontal-signin{
  margin-right: 5%;
  margin-bottom: 5%;
  margin-left: 5%;
  box-sizing: border-box;
  padding: 20px;
  padding-right: 25px;
  padding-left: 25px;
  border-radius: 6px;
  background-color: #eee;

}
.form-horizontal-signup{
  margin-left: 5%;
  margin-right: 5%;
  box-sizing: border-box;
  padding: 20px;
  padding-left: 25px;
  border-radius: 6px;
  background-color: #eee;
}
.form-signup{
  box-sizing: border-box;
  padding-right: 45px;
  padding-left: 45px;
  border-radius: 6px;
  background-color: #eee;
}
.navbar .nav>li>a {
    float: none;
    padding: 15px 15px 15px !important;
    color: #777777;
    text-decoration: none;
    text-shadow: 0 1px 0 #ffffff;
}
.navbar-brand {
  float: left;
  padding: 7px 10px;
  font-size: 18px;
  line-height: 20px;
  height: 50px;
}
.hidden-alerts{
  display: none;
}

.page-header {
  background-color: #eee;
  padding-top: 1px;
  padding-left: 15px;
}

.thumbnail {
  padding-top: 25px;
  background: #eee;

}

[ng\:cloak], [ng-cloak], .ng-cloak {
  display: none !important;
}

#googleMap{
  border-style: solid;
  width:500px;
  height:380px;
}

.infoWindow {
  font-family: 'Lato', sans-serif;
  text-align: left;
  margin: 0 auto;
  padding-left:0px;
  max-width: 325px;
  max-height: 190px;

}

.infoWindow>h3{
  font-weight:700;
  font-size: 16px;
  text-decoration: underline;
  text-align: center;

}

.infoWindow>p>strong{
  text-decoration: underline;
  font-size:13px;
}

.infoWindow>p{
  font-weight:400;
  font-size: 12px;
}

